# group_05

./: README.md
results/01_sod_flic/: values.txt
results/03_godunov_2d/: conservation.txt
results/04_mader_corner/: xr.txt
results/04_mader_det/: values.txt
results/04_mader_sod/: results.txt
results/05_cavity/: ghia_table.txt
results/09_naca/: aero.txt
results/11_mpi/: speedup.txt  verification.txt
src/euler_common/: graph.py  main.cpp
src/euler_common/Batarin/: parameters.cpp  parameters.h
src/euler_common/Feoktistov/: FeokFunktion.cpp  FeokFunktion.h
src/euler_common/Medyakova/: Output.cpp  Output.h
src/flic/: gifmake.py  main.cpp
src/flic/Feoktistov/: FeokFunktion.cpp  FeokFunktion.h
src/flic/Medyakova/: Output.cpp
src/godunov/2D/: CMakeLists.txt  graph.py  main.cpp  start.txt
src/godunov/2D/Feoktistov/: FeokFunktion.cpp  FeokFunktion.h
src/mader_2de/: CMakeLists.txt  main.cpp
src/mader_2de/Batarin/: parametrs.cpp
src/mader_2de/Feoktistov/: FeokFunktion.cpp  FeokFunktion.h
src/mpi_parallel/nonestruct/: shem.cpp
src/mpi_parallel/nonestruct/gmsh-reader/: 4.msh  4.vtk  5  AM  dz1_p1.err  dz1_p2.err  dz1_p3.err  fin.vtk  (+55 more)
src/simple_piso_pimple/: main.cpp
src/simple_piso_pimple/Batarin/: parameters.cpp  parameters.h
src/simple_piso_pimple/Feoktistov/: FeokFunktion.cpp
src/simple_piso_pimple/Medyakova/: Output.h
src/unstructed/Крыло/: Naca  Naca.cpp  Naca2  Naca2.cpp  angle_0.msh  angle_1.msh  angle_2.msh  angle_3.msh  angle_4.msh  angle_5.msh  graphs.py  mesh_quality.py
src/unstructed/Цилиндр/: cp_theta.csv  shem  shem.cpp
(+1 files in other folders)
